--- a/styles/base.css
+++ b/styles/base.css
@@ -10,7 +10,15 @@ h1 {
     color: #011936;
     font-weight: 100; 
 }
-
+h2 {
+    background-color: #011936;
+    text-align: center;
+    padding: 5px;
+    margin-bottom: 5px;
+    color:#f4f4f4;
+    border-radius: 5px;
+    box-shadow: #011936 2px 2px 5px;
+}
 body {
     font-family: "Barlow", sans-serif;
     font-weight: 400;
@@ -61,10 +69,6 @@ nav ul {
     width: 100%;
 }
 
-nav ul li {
-    display: flex;
-    flex-direction: row;
-}
 nav ul li a {
     padding:5px 10px;
     color: white;
@@ -87,6 +91,7 @@ main{
 #section1 {
     grid-column: span 1;
     background-color: #FFCFD2;
+    justify-items: center;
     padding: 20px;
     border-radius: 10px;
     box-shadow: #011936 2px 2px 5px;
@@ -94,13 +99,19 @@ main{
 #section2 {
     grid-column: span -1;
     background-color: #FFCFD2;
+    justify-items: center;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: #011936 2px 2px 5px;
+}
+#section2 img {
+    border-radius: 5px;
     box-shadow: #011936 2px 2px 5px;
 }
 #section3 {
     grid-column: span 2;
     background-color: #FFCFD2;
+    justify-items: center;
     padding: 20px;
     border-radius: 10px;
     box-shadow: #011936 2px 2px 5px;
@@ -122,7 +133,7 @@ footer {
     font-size: 16px;
     border: none;
     border-radius: 5px; 
-    
+ 
 }
 
 /* Completed course styles */
@@ -130,6 +141,9 @@ footer {
     background-color: #1B998B;
     color: white;
     border-radius: 5px;
+    box-shadow: #011936 2px 2px 5px;
+    margin: 5px 0;
+    text-shadow: #011936 1px 1px 2px;
 }
 
 /* Not completed course styles */
@@ -137,4 +151,7 @@ footer {
     background-color:#FFCFD2;
     color: white;
     border-radius: 5px; 
+    box-shadow: #011936 2px 2px 5px;
+    margin: 5px 0;
+    text-shadow: #011936 1px 1px 2px;
 }
