--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,4 +12,8 @@
         justify-content: space-evenly;
         align-items: center;
     }
+    /*hamburger*/
+    #menu-toggle {
+        display: none;
+    }
 }
