more fixes css directory

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -21,6 +21,10 @@ body {
     padding: 10px 0;
     width: 100%;
 }
+nav li a {
+    padding: 5px;
+    align-items: center;
+}
 #menu li {
     margin: 0 10px;
     padding-right: 20px;
@@ -32,12 +36,12 @@ nav ul li a.active {
     border-radius: 5px;
 }
 nav ul li a:hover {
-    background: color #17c3b2;
-    color: #fe6d73;
+    background-color: #17c3b2;
+    color: #FEF9EF;
     border-radius: 5px;
 }
 nav ul li a:visited {
-    background: color #17c3b2;
+    background-color: #17c3b2;
 }
 main {
     display: grid;
