--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -11,13 +11,35 @@ body {
     max-width: 100%;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
+.hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
 .hero-text {
     position: relative;
-    color: white;
+    z-index: 1;
     text-align: center;
-    background: #17c3b2; /* Semi-transparent black background */
+    background: rgba(23, 195, 178, 0.85); /* Semi-transparent background */
     padding: 1.5rem;
     border-radius: 10px;
+}
+.hero-button {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background:#FFCB77;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+}
+.hero-button:hover {
+    background: #FEF9EF;
 }
 #menu {
     display: flex;
