--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -11,6 +11,32 @@ body {
     max-width: 100%;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
+.top-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin:20px;
+    padding: 10px 0;
+    box-shadow: #011936 2px 2px 5px;
+    max-height: 200px;
+    overflow: hidden; /* Hide overflow */
+}
+.logo {
+    flex-direction: 1;
+    background: rgba(255, 255, 255, 0.65); /* Semi-transparent background */
+    border-radius: 20px;
+    margin-left:20px;
+    box-shadow: #011936 2px 2px 5px;
+}
+.top-header h1 {
+    flex-direction: 2;
+    background-color:rgba(255, 255, 255, 0.65);;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: #011936 2px 2px 5px;
+}
+
 .hero img {
     width: 100%;
     height: 100%;
@@ -25,8 +51,9 @@ body {
     z-index: 1;
     text-align: center;
     background: rgba(23, 195, 178, 0.85); /* Semi-transparent background */
-    padding: 1.5rem;
+    padding:1.5rem;
     border-radius: 10px;
+    box-shadow: #011936 2px 2px 5px;
 }
 .hero-button {
     display: inline-block;
@@ -37,37 +64,55 @@ body {
     text-decoration: none;
     font-weight: bold;
     border-radius: 5px;
+    box-shadow: #011936 2px 2px 5px;
 }
 .hero-button:hover {
     background: #FEF9EF;
 }
 #menu {
+    display : flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 20px;
+    list-style-type: none; /*this got rid of bullet points*/
+}
+#menu li {
+    margin:10px;
+    background-color:#FFCB77;
+    align-items: center;
+    box-shadow: #011936 2px 2px 5px;
+    padding: 5px;
+    align-content: center;
+    border-radius: 5px;
+}
+nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    list-style-type: none; /*this got rid of bullet points*/
-    margin: 10px;
-    padding: 10px 0;
-    width: 100%;
+    margin: 20px;
+    border-radius: 20px;
+    background-color: rgba(244, 244, 244, 0.55);
+    box-shadow: #011936 2px 2px 5px;
 }
+
 nav li a {
-    padding: 5px;
     align-items: center;
+    margin:10px;
+    padding: repeat 5px;
+
 }
-#menu li {
-    margin: 0 10px;
-    padding-right: 20px;
-    border-radius: 5px;
-}
+
 nav ul li a.active {
-    background-color: #FFCB77;
-    color:#130D01;
+    color:#f4f4f4;
+    font-weight: 600;
+    text-shadow: #130D01 1px 1px 2px;
     border-radius: 5px;
 }
 nav ul li a:hover {
     background-color: #17c3b2;
     color: #FEF9EF;
+    text-shadow: #130D01 1px 1px 5px;
     border-radius: 5px;
 }
 nav ul li a:visited {
@@ -76,11 +121,34 @@ nav ul li a:visited {
 main {
     display: grid;
     grid-template-columns: repeat(3, 30%);
-    background-color: #f4f4f4;
+    background-color: rgba(244, 244, 244, 0.65);
+    margin:20px;
+    box-shadow: #011936 2px 2px 5px;
+    border-radius: 10px;
+   
+}
+section {
+    min-width: content 100%;
+    padding: 20px;
+    margin: 10px;
+    background-color:rgba(244, 244, 244, 0.65);
+    border-radius: 10px;
+    box-shadow: #011936 2px 2px 5px;
 }
 .grid-view {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
-
+.foot-container {
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+    justify-content: space-evenly;
+    align-content: center;
+    background-color: rgba(244, 244, 244, 0.65);
+    margin:20px;
+    border-radius: 10px;
+    box-shadow: #011936 2px 2px 5px;
+    
+}
