--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -120,12 +120,12 @@ nav ul li a:visited {
 }
 main {
     display: grid;
-    grid-template-columns: repeat(3, 30%);
+    grid-template-columns:repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
     background-color: rgba(244, 244, 244, 0.65);
     margin:20px;
     box-shadow: #011936 2px 2px 5px;
     border-radius: 10px;
-   
 }
 section {
     min-width: content 100%;
@@ -134,6 +134,15 @@ section {
     background-color:rgba(244, 244, 244, 0.65);
     border-radius: 10px;
     box-shadow: #011936 2px 2px 5px;
+}
+.events{
+    grid-column:1;
+    grid-row:1;
+}
+#weather-section {
+    background-color:#FFCB77;
+    grid-column:2;
+    grid-row:1;
 }
 .grid-view {
     display: grid;
