--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -118,31 +118,39 @@ nav ul li a:hover {
 nav ul li a:visited {
     background-color: #17c3b2;
 }
-main {
+.main-content {/* Main content for home page */
     display: grid;
-    grid-template-columns:repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-columns:1fr,1fr;
+    grid-template-rows: auto, auto, auto;
+    gap: 20px;
+    margin: 20px;
     background-color: rgba(244, 244, 244, 0.65);
-    margin:20px;
     box-shadow: #011936 2px 2px 5px;
     border-radius: 10px;
 }
 section {
-    min-width: content 100%;
     padding: 20px;
     margin: 10px;
     background-color:rgba(244, 244, 244, 0.65);
     border-radius: 10px;
     box-shadow: #011936 2px 2px 5px;
 }
-.events{
-    grid-column:1;
-    grid-row:1;
+.events {
+    grid-column: 1/2;
+    grid-row: 2;
+}
+.main-content h2 {
+    grid-column: 1/-1;
+    font-size: 2rem;
 }
 #weather-section {
     background-color:#FFCB77;
-    grid-column:2;
-    grid-row:1;
+    grid-column: 2/3;
+    grid-row:2;
+}
+.spotlights {
+    grid-column: 1/-1;
+    grid-row:3;
 }
 .grid-view {
     display: grid;
