--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -127,6 +127,7 @@ nav ul li a:visited {
     background-color: rgba(244, 244, 244, 0.65);
     box-shadow: #011936 2px 2px 5px;
     border-radius: 10px;
+    align-items: stretch;
 }
 section {
     padding: 20px;
@@ -134,6 +135,12 @@ section {
     background-color:rgba(244, 244, 244, 0.65);
     border-radius: 10px;
     box-shadow: #011936 2px 2px 5px;
+}
+.events, #weather-section {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:100%;
 }
 .events {
     grid-column: 1/2;
@@ -151,6 +158,11 @@ section {
 .spotlights {
     grid-column: 1/-1;
     grid-row:3;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    text-align: center;
 }
 .grid-view {
     display: grid;
