--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -22,14 +22,12 @@ body {
     overflow: hidden; /* Hide overflow */
 }
 .logo {
-    flex-direction: 1;
     background: rgba(255, 255, 255, 0.65); /* Semi-transparent background */
     border-radius: 20px;
     margin-left:20px;
     box-shadow: #011936 2px 2px 5px;
 }
 .top-header h1 {
-    flex-direction: 2;
     background-color:rgba(255, 255, 255, 0.65);;
     border-radius: 20px;
     padding: 20px;
@@ -99,7 +97,7 @@ nav {
 nav li a {
     align-items: center;
     margin:10px;
-    padding: repeat 5px;
+    padding: 5px;
 
 }
 
@@ -120,8 +118,8 @@ nav ul li a:visited {
 }
 .main-content {/* Main content for home page */
     display: grid;
-    grid-template-columns:1fr,1fr;
-    grid-template-rows: auto, auto, auto;
+    grid-template-columns:1fr 1fr;
+    grid-template-rows: auto auto auto;
     gap: 20px;
     margin: 20px;
     background-color: rgba(244, 244, 244, 0.65);
