--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -39,7 +39,9 @@ body {
     margin: 20px;
     box-shadow: #011936 2px 2px 5px;
 }
-
+h1, h2 {
+    font-weight: 600;
+}
 .hero img {
     width: 100%;
     height: 100%;
@@ -70,7 +72,7 @@ body {
     background:#917446;
     color: black;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 600;
     border-radius: 5px;
     box-shadow: #011936 2px 2px 5px;
     transition: background-color 0.3s ease-in-out;
