--- a/styles/site_plan.css
+++ b/styles/site_plan.css
@@ -24,17 +24,17 @@
     padding-right: 20px;
 }
 nav ul li a.active {
-    background-color: #FFCB77;
+    background-color: #917446;
     color:#130D01;
     border-radius: 5px;
 }
 nav ul li a:hover {
-    background: color #17c3b2;
-    color: #fe6d73;
+    background: color #127d72;
+    color: #FEF9EF;
     border-radius: 5px;
 }
 nav ul li a:visited {
-    background: color #17c3b2;
+    background: color #127d72;
 }
 body {
     overflow-x: hidden;
@@ -43,7 +43,7 @@ body {
     background-color: #FEF9EF ;
 }
 h2 {
-    background-color: #FFCB77 ;
+    background-color: #917446;
     text-align: center;
     padding: 5px;
     margin-bottom: 5px;
