--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -219,6 +219,9 @@ section {
     flex-direction: column;
     align-items:center;
 }
+.membership-card {
+    justify-content: center;
+}
 /* footer*/
 .foot-container {
     display: flex;
