--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -12,6 +12,12 @@
     50% { transform: translateY(-20px); }
     100% { transform: translateY(0); }
 }
+@keyframes fadeInUp {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 /* global */
 * {
 	margin: 0;
@@ -28,16 +34,15 @@ body {
 /* Header and nav*/
 .top-header {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    margin:20px;
-    padding: 10px 0;
+    gap: 10px;
     box-shadow: #011936 2px 2px 5px;
     max-height: 200px;
     overflow: hidden; /* new Hide overflow */
 }
 
-.logo {
+.top-header .logo {
+    order: -1;
     background: rgba(255, 255, 255, 0.65); /* Semi-transparent background */
     margin-left:20px;
     box-shadow: #011936 2px 2px 5px;
@@ -49,7 +54,9 @@ body {
     border-radius: 20px;
     padding: 20px;
     margin: 20px;
+    flex-grow: 1;
     box-shadow: #011936 2px 2px 5px;
+    text-align: center;
 }
 h1, h2 {
     font-weight: 600; /* could remove later */
@@ -221,6 +228,7 @@ section {
 }
 .membership-card {
     justify-content: center;
+    animation: fadeInUp 1s ease-out forwards;
 }
 /* footer*/
 .foot-container {
@@ -237,29 +245,42 @@ section {
 }
 @media screen and (max-width: 48em) {
     #menu {
-      display: none;
-      flex-direction: column;
-      background-color: rgba(244, 244, 244, 0.95);
-      position: absolute;
-      top: 80px;
-      right: 20px;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: #011936 2px 2px 5px;
-      z-index: 9;
+        display: none;
+        flex-direction: column;
+        background-color: rgba(244, 244, 244, 0.95);
+        position: absolute;
+        top: 80px;
+        right: 20px;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: #011936 2px 2px 5px;
+        z-index: 9;
     }
     #menu.show {
-      display: flex;
+        display: flex;
     }
-  
     #menu li {
-      margin: 10px 0;
-      width: 100%;
-      text-align: center;
+        margin: 10px 0;
+        width: 100%;
+        text-align: center;
     }
-  }
-  @media screen and (min-width: 48em) {
-    #menu-toggle{
+    .main-content {
+        grid-template-columns: 1fr;
+    }
+    .grid-view {
+        grid-template-columns: 1fr;
+    }
+    h1, h2 {
+        font-size: 1.5rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    .hero-button, .view-toggle button {
+        width: 100%;
+        margin: 10px 0;
+    }
+    .view-toggle{
         display: none;
     }
-  }
+}
