--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -27,6 +27,25 @@
     color:#130D01;
     font-weight: 400;
 }
+/* reuse */
+:root {
+    --primary-color: #127d72;
+    --secondary-color: #917446;
+    --text-color: #130D01;
+    --text-shadow: #130D01 1px 1px 2px;
+    --box-shadow: #011936 2px 2px 5px;
+    --border-radius: 10px;
+    --background-color:rgba(255, 255, 255, 0.65);
+}
+#box-shadow {
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+}
+
+#bg-semi-transparent {
+    background-color: var(--background-color);
+}
+
 body {
     max-width: 100%;
     overflow-x: hidden; /* new Preventing horizontal scrolling */
@@ -36,27 +55,27 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 10px;
-    box-shadow: #011936 2px 2px 5px;
     max-height: 200px;
     overflow: hidden; /* new Hide overflow */
+    box-shadow: var(--box-shadow);
 }
 
 .top-header .logo {
     order: -1;
-    background: rgba(255, 255, 255, 0.65); /* Semi-transparent background */
+    background-color: var(--background-color); /* Semi-transparent background */
     margin-left:20px;
-    box-shadow: #011936 2px 2px 5px;
     border-radius: 20px;
     animation: fadeIn 2s ease-in;
+    box-shadow: var(--box-shadow);
 }
 .top-header h1 {
-    background-color:rgba(255, 255, 255, 0.65);;
+    background-color: var(--background-color);
     border-radius: 20px;
     padding: 20px;
     margin: 20px;
     flex-grow: 1;
-    box-shadow: #011936 2px 2px 5px;
     text-align: center;
+    box-shadow: var(--box-shadow);
 }
 h1, h2 {
     font-weight: 600; /* could remove later */
@@ -68,8 +87,8 @@ nav {
     align-items: center;
     margin: 20px;
     border-radius: 20px;
-    background-color: rgba(244, 244, 244, 0.55);
-    box-shadow: #011936 2px 2px 5px;
+    background-color: var(--background-color);
+    box-shadow: var(--box-shadow);
 }
 nav li a {
     align-items: center;
@@ -81,18 +100,18 @@ nav li a {
 nav ul li a.active {
     color:#f4f4f4;
     font-weight: 600;
-    text-shadow: #130D01 1px 1px 2px;
+    text-shadow: var(--text-shadow);
     border-radius: 5px;
 }
 nav ul li a:hover {
-    background-color: #127d72;
+    background-color: var(--primary-color);
     color: #FEF9EF;
-    text-shadow: #130D01 1px 1px 5px;
+    text-shadow: var(--text-shadow);
     border-radius: 5px;
-    box-shadow: #011936 2px 2px 5px;
+    box-shadow: var(--box-shadow);
 }
 nav ul li a:visited {
-    background-color: #127d72;
+    background-color: var(--primary-color);
 }
 /* menu */
 #menu {
@@ -104,7 +123,7 @@ nav ul li a:visited {
 }
 #menu li {
     margin:10px;
-    background-color:#917446;
+    background-color: var(--secondary-color);
     align-items: center;
     box-shadow: #011936 2px 2px 5px;
     padding: 5px;
@@ -119,7 +138,7 @@ nav ul li a:visited {
     font-size: 5rem;
     background: none;
     border: none;
-    color: #127d72;
+    color: var(--primary-color);
     position: absolute;
     top: 10px;
     right: 20px;
@@ -139,21 +158,21 @@ nav ul li a:visited {
     position: relative;
     z-index: 1;
     text-align: center;
-    background: rgba(18, 125, 114, 0.85); /* Semi-transparent background */
+    background: var(--primary-color); 
     padding:1.5rem;
     border-radius: 10px;
-    box-shadow: #011936 2px 2px 5px;
+    box-shadow: var(--box-shadow);
 }
 .hero-button {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background:#917446;
+    background-color:var(--secondary-color);
     color: black;
     text-decoration: none;
     font-weight: 600;
     border-radius: 5px;
-    box-shadow: #011936 2px 2px 5px;
+    box-shadow: var(--box-shadow);
     transition: background-color 0.3s ease-in-out;
     animation: bounce 1.3s ease-in-out infinite;
 }
@@ -167,17 +186,16 @@ nav ul li a:visited {
     grid-template-rows: auto auto auto;
     gap: 20px;
     margin: 20px;
-    background-color: rgba(244, 244, 244, 0.65);
-    box-shadow: #011936 2px 2px 5px;
+    box-shadow: var(--box-shadow);
     border-radius: 10px;
     align-items: stretch;
 }
 section {
     padding: 20px;
     margin: 10px;
-    background-color:rgba(244, 244, 244, 0.65);
+    background-color: var(--background-color);
     border-radius: 10px;
-    box-shadow: #011936 2px 2px 5px;
+    box-shadow: var(--box-shadow);
 }
 .main-content h2 {
     grid-column: 1/-1;
@@ -195,7 +213,7 @@ section {
 }
 
 #weather-section {
-    background-color:#917446;
+    background-color: var(--secondary-color);
     grid-column: 2/3;
     grid-row:2;
     animation: slideIn 1s ease-out;
@@ -211,7 +229,7 @@ section {
     animation: fadeIn 2s ease-in;
 }
 .spotlights img {
-    box-shadow: #011936 2px 2px 5px;
+    box-shadow: var(--box-shadow);
     border-radius: 5px;
 
 }
@@ -237,23 +255,23 @@ section {
     padding: 5px;
     justify-content: space-evenly;
     align-content: center;
-    background-color: rgba(244, 244, 244, 0.65);
+    background-color: var(--background-color);
     margin:20px;
     border-radius: 10px;
-    box-shadow: #011936 2px 2px 5px;
+    box-shadow: var(--box-shadow);
     
 }
 @media screen and (max-width: 48em) {
     #menu {
         display: none;
         flex-direction: column;
-        background-color: rgba(244, 244, 244, 0.95);
+        background-color: var(--background-color);
         position: absolute;
         top: 80px;
         right: 20px;
         padding: 10px;
         border-radius: 10px;
-        box-shadow: #011936 2px 2px 5px;
+        box-shadow: var(--box-shadow);
         z-index: 9;
     }
     #menu.show {
