--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -244,6 +244,10 @@ section {
     flex-direction: column;
     align-items:center;
 }
+.businesses img{
+    max-width: 153px;
+    max-height: 153px;
+}
 .membership-card {
     justify-content: center;
     animation: fadeInUp 1s ease-out forwards;
