--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -77,9 +77,6 @@ body {
     text-align: center;
     box-shadow: var(--box-shadow);
 }
-h1, h2 {
-    font-weight: 600; /* could remove later */
-}
 nav {
     display: flex;
     flex-direction: row;
@@ -246,6 +243,17 @@ section {
     display:flex;
     flex-direction: column;
     align-items:center;
+    gap:20px;
+    margin:20px;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);
+}
+.businesses h2 {
+    margin-bottom: 20px; /* space below the heading */
+    text-align: center; 
+    font-size: 2rem;
+    color: var(--primary-color);
 }
 .businesses img{
     max-width: 153px;
