--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -163,7 +163,7 @@ nav ul li a:visited {
     border-radius: 10px;
     box-shadow: var(--box-shadow);
 }
-.hero-button {
+.hero-button, div button{
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
@@ -189,6 +189,7 @@ nav ul li a:visited {
     box-shadow: var(--box-shadow);
     border-radius: 10px;
     align-items: stretch;
+    background-color: var(--primary-color);
 }
 section {
     padding: 20px;
@@ -238,8 +239,11 @@ section {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
-
-.businesses{ /*smh */
+.main-content2{
+    background-color: var(--primary-color);
+    text-align: center;
+}
+.businesses{ 
     display:flex;
     flex-direction: column;
     align-items:center;
@@ -259,9 +263,33 @@ section {
     max-width: 153px;
     max-height: 153px;
 }
-.membership-card {
+dialog {
+    padding: 20px;
     justify-content: center;
-    animation: fadeInUp 1s ease-out forwards;
+    animation: slideIn 1s ease-out;
+    border-radius: var(--border-radius);
+}
+dialog button{
+    background-color: var(--primary-color);
+    box-shadow: var(--box-shadow);
+    animation: fadeIn 5s ease-in;
+    border-radius: var(--border-radius);  
+}
+button:hover{
+    background: #FEF9EF;
+}
+.section-content{
+    display: grid;
+    padding: 10px;
+    font-size: 2rem;
+}
+#form label {
+    display: grid;
+    padding: 10px;
+    font-size: 1rem;
+}
+#thankyou{
+    padding: 10px;
 }
 /* footer*/
 .foot-container {
