--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -309,7 +309,7 @@ button:hover{
     text-align: center;
     margin: 10px;
 }
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 600px) {
     #menu {
         display: none;
         flex-direction: column;
@@ -322,6 +322,15 @@ button:hover{
         box-shadow: var(--box-shadow);
         z-index: 9;
     }
+    header h1{
+        display:none;
+    }
+    .top-header{
+        grid-area: 1/ span 6;/* new this might have to go */
+    }
+    section{
+        grid-area: span;
+    }
     #menu.show {
         display: flex;
     }
@@ -331,6 +340,10 @@ button:hover{
         text-align: center;
     }
     .main-content {
+        /*grid-template-columns: 1fr;*/
+        grid-area: 3/ span 6;/* new this might have to go */
+    }
+    .main-content2 {
         grid-template-columns: 1fr;
     }
     .grid-view {
@@ -348,5 +361,24 @@ button:hover{
     }
     .view-toggle{
         display: none;
+    }
+}
+@media only screen and (min-width: 600px) {
+    #menu{
+        display: flex;
+        flex-direction: space-between;
+    }
+    .foot-container{
+        grid-area: 4/ span 6;
+    }
+
+}
+@media only screen and (min-width: 768px) {
+    .foot-container{
+        grid-area: 3/ span 6;
+    }
+    #menu{
+        display: flex;
+        flex-direction: space-between;
     }
 }
