--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -2,4 +2,9 @@
     .cards-container {
       grid-template-columns: repeat(4, 1fr);
     }
+    .cards-container img {
+        width: 300px;
+        height: 200px;
+        object-fit: cover;
+      }
   }
