--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -2,6 +2,11 @@
     grid-template-areas: "visit cards";
     grid-template-columns: 1fr 2fr;
   }
+  .cards-container img {
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+  }
   .card img:hover {
     transform: scale(1.05);
     transition: transform 0.3s ease-in-out;
