--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -47,11 +47,11 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 10px;
+    min-height: 150px;
     max-height: 200px;
     overflow: hidden; /* new Hide overflow */
     box-shadow: var(--box-shadow);
 }
-
 .top-header .logo {
     order: -1;
     background-color: var(--background-color); /* Semi-transparent background */
@@ -71,6 +71,7 @@ body {
 }
 nav {
     display: flex;
+    min-height: 60px;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
@@ -102,9 +103,23 @@ nav ul li a:hover {
 nav ul li a:visited {
     background-color: var(--primary-color);
 }
-/* menu */
+/* menu 
+display: none;
+    flex-direction: column; 
+    position: absolute;
+    background-color: var(--background-color);
+    display: none;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: var(--box-shadow);*/
+    /*display : flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 20px;
+    list-style-type: none;*/
 #menu {
-    display : flex;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin: 20px;
@@ -113,6 +128,13 @@ nav ul li a:visited {
     box-shadow: var(--box-shadow);
     z-index: 9;
     border-radius: var(--border-radius);
+    width: max-content;
+    min-width: 100px;
+    right: 10px;
+}
+#menu.show {
+    display: flex;
+    z-index: 11;
 }
 #menu li {
     margin:10px;
@@ -124,33 +146,50 @@ nav ul li a:visited {
     border-radius: 5px;
 }
  /* Hamburger button */
- 
  #menu-toggle {
-    display: block;
+    display: flex;
     cursor: pointer;
     background: none;
     border: none;
     color: var(--primary-color);
     position: absolute;
-    top: 10px;
+    top: 20px;
     right: 20px;
-    z-index:10;
+    z-index: 11;
     width: 40px; /* does this fix the shift?*/
     height: 40px; /* does this fix the shift?*/
     font-size: 1.5rem; /* does this fix the shift?*/
 }
 /* hero */
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    text-align: center;
+}
+.hero h1{
+    order:1;
+    margin: 1rem 0;
+    text-align: center;
+    padding:10px;
+    color:#FEF9EF;
+    background-color: #0C5A52;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+}
 .hero img {
     width: 100%;
     height: auto;
+    display: block;
     object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
-    
 }
 .hero-text {
+    order:2;
     position: relative;
     z-index: 1;
     text-align: center;
@@ -185,9 +224,17 @@ button:hover,.hero-button:hover {
     box-shadow: var(--box-shadow);
     border-radius: 10px;
     align-items: stretch;
-    background-color: var(--primary-color);
+    background-color: var(--background-color);
     max-width: 100%;
     overflow-x: hidden; 
+}
+.main-content h2 {
+    grid-column: 1/-1;
+    font-size: 2rem;
+}
+.main-content2{
+    background-color: var(--primary-color);
+    text-align: center;
 }
 section {
     padding: 20px;
@@ -198,10 +245,7 @@ section {
     max-width: 100%;
     overflow-x: hidden; 
 }
-.main-content h2 {
-    grid-column: 1/-1;
-    font-size: 2rem;
-}
+
 .events, #weather-section {
     display:flex;
     flex-direction: column;
@@ -232,7 +276,9 @@ section {
 .spotlights img {
     box-shadow: var(--box-shadow);
     border-radius: 5px;
-
+    width: 100%;
+    height: auto;
+    display: block;
 }
 .grid-view {
     display: grid;
@@ -243,10 +289,6 @@ section {
     display:flex;
     flex-direction: column;
     justify-content: center;
-}
-.main-content2{
-    background-color: var(--primary-color);
-    text-align: center;
 }
 .businesses{ 
     display:flex;
@@ -265,7 +307,7 @@ section {
     color: var(--primary-color);
 }
 .businesses img{
-    max-width: 100%;
+    width: 100%;
     justify-content: center;
     height: auto;
     display: block;
@@ -299,82 +341,16 @@ dialog button{
 .foot-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    padding: 10px;
+    align-items: flex-start;
+    padding: 1rem;
     background-color: var(--background-color);
     margin:20px;
     border-radius: 10px;
     box-shadow: var(--box-shadow);
-    flex-wrap: wrap;
 }
 .foot-container div {
     flex:1;
     text-align: center;
-    margin: 10px;
-}
-@media screen and (max-width: 100px) {
-    #menu {
-        display: none;
-        flex-direction: column;
-        background-color: var(--background-color);
-        position: absolute;
-        top: 60px;
-        right: 20px;
-        padding: 10px;
-        border-radius: 10px;
-        box-shadow: var(--box-shadow);
-        z-index: 9;
-    }
-    #menu.show {
-        display: flex;/*this should show menu*/
-    }
-    .top-header{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
-        align-items: center;
-        justify-content: center ;
-    }
-    
-    #menu li {
-        margin: 10px 0;
-        width: 100%;
-        text-align: center;
-    }
-    .main-content {
-        grid-template-columns: 1fr;
-       
-    }
-    .main-content2 {
-        grid-template-columns: 1fr;
-    }
-    .grid-view {
-        grid-template-columns: 1fr;
-    }
-    h1, h2 {
-        font-size: 1.5rem;
-    }
-    p {
-        font-size: 1rem;
-    }
-    .hero-button, .view-toggle button {
-        width: 100%;
-        margin: 10px 0;
-    }
-    .view-toggle{
-        display: none;/*this is for directory only*/
-    }
-}
-
-@media only screen and (min-width: 768px){
-    nav{display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    margin: 20px;
-    border-radius: 20px;
-    background-color: var(--background-color);
-    box-shadow: var(--box-shadow);
-}
 }
